First commited as before_72578_rev1